tests/NormalTests/paczka1/small_fuzzy/40442809.err
Error in line 1: S978 S573 69,1
Error in line 8: S978 S437 42,3
Error in line 11: S978 S573 18,66
Error in line 12: C2C2rAXv6 S573 80,9
